[feat] Parallelize CI

--- a/archlinux-aurman/Dockerfile
+++ b/archlinux-aurman/Dockerfile
@@ -1,13 +1,12 @@
-ARG $registry=
+ARG registry=
 FROM ${registry}archlinux-makepkg
 
-# Install makepkg
 RUN su makepkg -c 'gpg --keyserver keyserver.ubuntu.com --recv-keys 465022E743D71E39' \
  && cd /tmp \
  && su makepkg -c 'git clone https://aur.archlinux.org/aurman.git' \
  && cd /tmp/aurman \
  && pacman -Sy \
- && su aurman -c 'makepkg --noconfirm --rmdeps -si' \
+ && su makepkg -c 'makepkg --noconfirm --rmdeps -si' \
  && rm -Rf /tmp/aurman \
  && rm -R /var/cache/pacman/pkg/* /var/lib/pacman/sync/*
 
