--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,6 +1,3 @@
-# See
-# https://docs.github.com/en/packages/managing-github-packages-using-github-actions-workflows/publishing-and-installing-a-package-with-github-actions
-
 name: Build and push images
 
 on:
@@ -10,29 +7,54 @@ on:
   push:
 
 jobs:
-  list-images:
+  generate-jobs:
+    name: Generate Jobs
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        # We are using "pathlib" which requires at least 3.9
+        python-version: '3.9'
     - id: set-matrix
-      run: echo "::set-output name=matrix::$(_scripts/info.py .)"
+      run: |
+        deps=$(_scripts/dependencies.py --github-actions-matrix .)
+        echo "::set-output name=matrix::$deps"
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
 
+  # Don't use continue-on-error to continue when one job fails, because this
+  # will make the pipeline pass, even if one job fails
   push:
-    needs:
-    - list-images
-    - "${{ matrix.info.dependency }}"
+    name: ${{ matrix.dockerfiles }}
+    needs: generate-jobs
     runs-on: ubuntu-latest
     permissions:
       packages: write
       contents: read
     strategy:
       matrix:
-        info: ${{ fromJson(needs.list-images.outputs.matrix) }}
+        dockerfiles: ${{ fromJson(needs.generate-jobs.outputs.matrix) }}
     steps:
     - uses: actions/checkout@v2
+
     - name: Log in to registry
+      # https://docs.github.com/en/packages/managing-github-packages-using-github-actions-workflows/publishing-and-installing-a-package-with-github-actions
       run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-    - name: Build and push image
-      run: _scripts/build.sh --image "${{ matrix.info.name }}" --push "ghcr.io/${{ github.repository_owner }}"
+
+    - name: Build and push images
+      run: |
+        for dockerfile in ${{ matrix.dockerfiles }}; do
+          echo
+          echo
+          echo
+          echo =======================
+          echo =======================
+          echo "$dockerfile"
+          echo =======================
+          echo =======================
+          echo
+          echo
+          echo
+          _scripts/build.sh --image "$dockerfile" --push "ghcr.io/${{ github.repository_owner }}"
+        done
