--- a/spotify/Dockerfile
+++ b/spotify/Dockerfile
@@ -11,7 +11,8 @@ RUN apt-get update \
     curl \
     dirmngr \
     gnupg \
- && curl -sS https://download.spotify.com/debian/pubkey_0D811D58.gpg | apt-key add -  \
+# See https://www.spotify.com/us/download/linux/ for the installation instructions
+ && curl -sS https://download.spotify.com/debian/pubkey_5E3C45D7B312C643.gpg | apt-key add - \
  && echo "deb http://repository.spotify.com stable non-free" >> /etc/apt/sources.list.d/spotify.list \
  && apt-get update \
  && apt-get install -y --no-install-recommends \
