--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,6 +12,17 @@ jobs:
     name: Generate Jobs
     runs-on: ubuntu-latest
     steps:
+
+    - name: Delete untagged Docker images
+      uses: snok/container-retention-policy@v1
+      with:
+        image-names: "*"
+        cut-off: A week ago UTC
+        account-type: personal
+        keep-at-least: 1
+        untagged-only: true
+        token: ${{ secrets.PAT }}
+
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
