--- a/spotify/Dockerfile
+++ b/spotify/Dockerfile
@@ -12,8 +12,8 @@ RUN apt-get update \
     dirmngr \
     gnupg \
 # See https://www.spotify.com/us/download/linux/ for the installation instructions
- && curl -sS https://download.spotify.com/debian/pubkey_5E3C45D7B312C643.gpg | apt-key add - \
- && echo "deb http://repository.spotify.com stable non-free" >> /etc/apt/sources.list.d/spotify.list \
+ && curl -sS https://download.spotify.com/debian/pubkey_7A3A762FAFD4A51F.gpg | gpg --dearmor --yes -o /etc/apt/trusted.gpg.d/spotify.gpg \
+ && echo "deb http://repository.spotify.com stable non-free" | tee /etc/apt/sources.list.d/spotify.list \
  && apt-get update \
  && apt-get install -y --no-install-recommends \
     alsa-utils \
