fix(ci): do not push images in PRs

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -45,6 +45,14 @@ jobs:
 
     - name: Build and push images
       run: |
+        branch=$(git rev-parse --abbrev-ref HEAD)
+
+        # do not push the image in PRs
+        push=()
+        if [ "$branch" = main ]; then
+          push=(--push)
+        fi
+
         for dockerfile in ${{ matrix.dockerfiles }}; do
           echo
           echo
@@ -57,5 +65,5 @@ jobs:
           echo
           echo
           echo
-          _scripts/build.sh --image "$dockerfile" --push ghcr.io/"${{ github.repository_owner }}"
+          _scripts/build.sh --image "$dockerfile" "${push[@]}" ghcr.io/"${{ github.repository_owner }}"
         done
